partial untestable port