@@ -1,8 +1,6 @@
 package sf.ssf.sfort.ocaip;
 
 
-import net.fabricmc.api.EnvType;
-import net.fabricmc.api.Environment;
 import net.i2p.crypto.eddsa.EdDSAPrivateKey;
 import net.i2p.crypto.eddsa.EdDSAPublicKey;
 import net.i2p.crypto.eddsa.KeyPairGenerator;
@@ -10,13 +8,13 @@ import net.i2p.crypto.eddsa.spec.EdDSAPrivateKeySpec;
 import net.i2p.crypto.eddsa.spec.EdDSAPublicKeySpec;
 
 import java.io.File;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystemException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.security.KeyPair;
 import java.util.Base64;
 
-@Environment(EnvType.CLIENT)
 public class Tape {
 	public static KeyPair key;
 	public static final Path path = new File("ocaip.key").toPath();
@@ -29,7 +27,7 @@ public class Tape {
 		} catch (FileSystemException e) {
 			try {
 				key = new KeyPairGenerator().generateKeyPair();
-				Files.writeString(path, Base64.getEncoder().encodeToString(((EdDSAPrivateKey)key.getPrivate()).getSeed()));
+				Files.write(path, Base64.getEncoder().encodeToString(((EdDSAPrivateKey)key.getPrivate()).getSeed()).getBytes(StandardCharsets.UTF_8));
 			}catch (Exception ignore){
 				Reel.log.error("");
 			}
